# GlassRoom

./: meson.build  standalone.glassroom.GlassRoom.json
data/: meson.build  standalone.glassroom.GlassRoom.appdata.xml.in  standalone.glassroom.GlassRoom.desktop.in  standalone.glassroom.GlassRoom.gschema.xml
po/: POTFILES  meson.build
src/: application.vala  glass_room.gresource.xml  main.vala  meson.build  propertyedit.vala  propertyform.vala  recordheaderbox.ui  recordheaderbox.vala  recordoptionview.ui  recordoptionview.vala  srcbin.vala  srcbinedit.ui  srcbinedit.vala  srcbinrow.ui  srcbinrow.vala  window.ui  window.vala
